# bootcamp-py-aula-09

./: LICENSE  README.md  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  tenacity_exemplo.py  timer_decorator.py  utils_log.py
data/clean/: vendas_consolidado.parquet
